# Speedometer-Project

./: .gitignore  CMakeLists.txt  README.md
desktop/client/: main.cpp
desktop/client/include/: canvas.h  comservice.h  tcpservice.h  uartservice.h  window.h
desktop/client/src/: canvas.cpp  comservice.cpp  tcpservice.cpp  uartservice.cpp  window.cpp
desktop/server/: main.cpp
desktop/server/include/: comservice.h  tcpservice.h  uartservice.h  window.h
desktop/server/src/: comservice.cpp  tcpservice.cpp  uartservice.cpp  window.cpp
esp32/client/: platformio.ini  sdkconfig.esp32-c6-devkitc-1.old
esp32/client/src/: main.c
esp32/server/: platformio.ini  sdkconfig.esp32-c6-devkitc-1
esp32/server/src/: main.c
esp32/temp_backup/back_up/client/: platformio.ini
esp32/temp_backup/back_up/client/src/: main.c
esp32/temp_backup/back_up/server/: CMakeLists.txt  platformio.ini
esp32/temp_backup/back_up/server/components/: a67b46e1-346b-4ebb-ad21-63788f4accfb.tgz
esp32/temp_backup/back_up/server/src/: main.c
shared/: setting.h
